--- a/package.json
+++ b/package.json
@@ -2,18 +2,26 @@
   "name": "japanesedictionary",
   "version": "1.0.0",
   "description": "",
-  "main": "build/index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "dev": "nodemon",
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "build": "tsc",
+    "prestart": "npm run build",
+    "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^18.7.2",
+    "tslint": "^6.1.3",
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "nodemon": "^2.0.19"
+    "@types/express": "^4.17.13",
+    "express": "^4.18.1",
+    "nodemon": "^2.0.19",
+    "ts-node": "^10.9.1"
   }
 }
