--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/flexsearch": "^0.7.3",
     "@types/node": "^18.7.2",
     "tslint": "^6.1.3",
     "typescript": "^4.7.4"
@@ -21,6 +22,7 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "express": "^4.18.1",
+    "flexsearch": "^0.7.21",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1"
   }
